# lab6

./: CMakeLists.txt  main.cpp  test.cpp
.github/workflows/: build.yml
solver/: CMakeLists.txt
solver/src/: solver.cpp  solver.h
solver/test/: test.cpp
